--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.54",
   "private": true,
   "scripts": {
-    "bundle-win32": "rnw-scripts prepareBundleWin32 && npx react-native bundle --entry-file Samples\\rntester.tsx --bundle-output windows\\playground-win32\\Bundle\\Samples\\rntester.bundle --platform windows --assets-dest windows\\playground-win32\\Bundle",
+    "bundle-win32": "rnw-scripts prepareBundleWin32 && npx react-native bundle --entry-file Samples/rntester.tsx --bundle-output windows/playground-win32/Bundle/Samples/rntester.bundle --platform windows --assets-dest windows/playground-win32/Bundle",
     "start": "react-native start",
     "lint:fix": "rnw-scripts lint:fix",
     "lint": "rnw-scripts lint",
@@ -21,7 +21,6 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/runtime": "^7.8.4",
-    "@react-native/babel-plugin-codegen": "0.73.4",
     "@react-native/metro-config": "^0.73.0",
     "@rnw-scripts/babel-react-native-config": "0.0.0",
     "@rnw-scripts/eslint-config": "1.2.3",
