--- a/.ado/jobs/setup.yml
+++ b/.ado/jobs/setup.yml
@@ -40,8 +40,8 @@ jobs:
         - script: npx beachball check --branch origin/$(BeachBallBranchName) --verbose --changehint "##vso[task.logissue type=error]Run \"yarn change\" from root of repo to generate a change file."
           displayName: Check for change files
 
-      - script: npx beachball bump --branch origin/$(BeachBallBranchName) --yes --verbose
-        displayName: beachball bump
+      # - script: npx beachball bump --branch origin/$(BeachBallBranchName) --yes --verbose
+      #   displayName: beachball bump
 
       - template: ../templates/set-version-vars.yml
         parameters:
